Fix missing assets and audio for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -13,33 +13,33 @@
   <!-- Inline assets JSON fallback -->
   <script type="application/json" id="assets">
   {
-    "BG_TITLE":  "assets/start screen_image1.png",
+    "BG_TITLE":  "assets/start_screen_image1.png",
     "TILLY":     "assets/Tilly_transparent.png",
     "REKU":      "assets/Reku_transparent.png",
-    "PROF":      "assets/Mad Professor_transparent.png",
+    "PROF":      "assets/Mad_Professor_transparent.png",
     "VIDEO_INTRO":"assets/intro_video_lab.mp4",
-    "RULES_0":   "assets/rules of the game_image 1.png",
-    "RULES_1":   "assets/rules of the game_first rule_image 2.png",
-    "RULES_2":   "assets/rules of the game_second rule_image 3.png",
-    "RULES_3":   "assets/rules of the game_third rule_next button_image 4.png",
+    "RULES_0":   "assets/rules_of_the_game_image1.png",
+    "RULES_1":   "assets/rules_of_the_game_first_rule_image2.png",
+    "RULES_2":   "assets/rules_of_the_game_second_rule_image3.png",
+    "RULES_3":   "assets/rules_of_the_game_third_rule_next_button_image4.png",
     "Q1":  "assets/15.png",
-    "Q2":  "assets/15_image (3).png",
-    "Q3":  "assets/15_image (4).png",
-    "Q4":  "assets/15_image (5).png",
-    "Q5":  "assets/15_image (6).png",
-    "Q6":  "assets/15_image (7).png",
-    "Q7":  "assets/15_image (8).png",
-    "Q8":  "assets/15_image (9).png",
-    "Q9":  "assets/15_image (10).png",
-    "Q10": "assets/15_image (11).png",
+    "Q2":  "assets/15_image_3.png",
+    "Q3":  "assets/15_image_4.png",
+    "Q4":  "assets/15_image_5.png",
+    "Q5":  "assets/15_image_6.png",
+    "Q6":  "assets/15_image_7.png",
+    "Q7":  "assets/15_image_8.png",
+    "Q8":  "assets/15_image_9.png",
+    "Q9":  "assets/15_image_10.png",
+    "Q10": "assets/15_image_11.png",
     "CORRECT1":  "assets/16.png",
     "AFTER":     "assets/35.png",
     "CONGRATS":  "assets/37.png",
-    "AUDIO_LOOP":    "",
-    "AUDIO_START":   "",
-    "AUDIO_NEXT":    "",
-    "AUDIO_CORRECT": "",
-    "AUDIO_WRONG":   ""
+    "AUDIO_LOOP":    "assets/loop.mp3",
+    "AUDIO_START":   "assets/start.wav",
+    "AUDIO_NEXT":    "assets/next.wav",
+    "AUDIO_CORRECT": "assets/correct.wav",
+    "AUDIO_WRONG":   "assets/wrong.wav"
   }
   </script>
   <script src="main.js"></script>
